# repo2mono

./: .gitignore  README.md  cli.py  code2md.py  code_output.md  mono_output.md  process.py  pyproject.toml
code2md/: __init__.py  cli.py  code2md.py
mono/: __init__.py  cli.py  mono.py
repo2mono/: cli.py
