[tool.poetry]
name = "code2md"
version = "0.1.0"
description = "Codebase to Markdown with file tree."
authors = ["jaredkirby <jpeterkirby@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
